--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ theme = 'hugo-bearblog'
 # Basic metadata configuration for your blog.
 title = "Breno's Blog"
 author = "Breno Santana"
-copyright = "Copyright © 2025, Breno Santana de Souza."
+copyright = "Copyright © 2025, Breno Santana de Souza"
 languageCode = "pt-br"
 defaultContentLanguage = "pt-br"
 
@@ -24,7 +24,7 @@ ignoreErrors = ["error-disable-taxonomy"]
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
-  description = "Eu me chamo Breno Santana, mas também pode me chamar de Coaxito. Esse daqui é o meu cantinho digital. Nas horas vagas, me dedico a escrever no meu blog sobre música, tecnologia e internet. Também sou fotógrafo, web designer e artista independente de folk e música ambiente."
+  description = "Meu nome é chamo Breno Santana, mas você também pode me chamar de Coaxito. Esse blog daqui é o meu cantinho digital aconchegante. Nas horas vagas, me dedico a escrever no meu sobre música, tecnologia e internet. Também sou fotógrafo, web designer e artista independente de folk e música ambiente."
 
   # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
   # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
