--- a/hugo.toml
+++ b/hugo.toml
@@ -1,14 +1,14 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https://coaxito.com"
+baseURL = "https://coaxito.com" # << VERIFIQUE se este é o domínio final correto
 
 # The name of this wonderful theme ;-).
-theme = 'hugo-bearblog'
+theme = 'hugo-bearblog' # << Base theme, pode ser removido se você copiou todo o tema para /layouts e /static
 
 # Basic metadata configuration for your blog.
 title = "Breno's Blog"
 author = "Breno Santana"
-copyright = "Copyright © 2025, Breno Santana de Souza"
+# copyright = "Copyright © 2025, Breno Santana de Souza" # << REMOVIDO - Recomenda-se tratar o ano dinamicamente no footer.html
 languageCode = "pt-br"
 defaultContentLanguage = "pt-br"
 
@@ -16,38 +16,28 @@ defaultContentLanguage = "pt-br"
 enableRobotsTXT = true
 
 # Generate "Bearblog"-like URLs !only!, see https://bearblog.dev/.
+# Desabilita taxonomias (tags, categories) - OK se for sua intenção.
 disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
-  blog = "/:slug/" # Mantido, pois posts estão em content/blog/
-  # linha 'tags = ...' foi REMOVIDA
+  blog = "/:slug/" # URLs para posts dentro de /content/blog/ -> seusite.com/slug-do-post/ - OK
 
 [params]
-  # The "description" of your website. This is used in the meta data of your generated html.
-  description = "Me chamo Breno Santana (21). Meu principal hobby é escrever sobre música, tecnologia, internet e outros tópicos pessoais. Também sou fotógrafo, designer gráfico e artista independente de folk e música ambiente."
+  # Descrição curta para meta tags SEO e previews (Idealmente < 160 caracteres)
+  description = "Blog pessoal de Breno Santana, sobre música, tecnologia, internet, fotografia e outros tópicos pessoais." # << SUGESTÃO de versão mais curta
 
-  # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
-  # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
-  favicon = ["favicon.png"]
+  # O parâmetro favicon provavelmente não é mais necessário após usar RealFaviconGenerator
+  # favicon = ["favicon.png"] # << COMENTADO/REMOVIDO - Controle agora está em custom_head.html
 
-  # These "images" are used for the structured data templates. This will show up, when
-  # services like Twitter or Slack want to generate a preview of a link to your site.
-  # See https://gohugo.io/templates/internal#twitter-cards and
-  # https://gohugo.io/templates/internal#open-graph.
-  images = ["favicon.png"]
+  # Imagem padrão para Open Graph / Twitter Cards (usada quando a página não tem imagem específica)
+  # Recomenda-se usar uma imagem 1200x630px.
+  images = ["images/default-share.jpg"] # << ATUALIZADO - Crie esta imagem em static/images/default-share.jpg
 
-  # Another "title" :-). This one is used as the site_name on the Hugo's internal
-  # opengraph structured data template.
-  # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "Breno's Blog"
+  # title usado para og:site_name nos templates internos do Hugo
+  title = "Breno's Blog" # << OK
 
-  # This theme will, by default, inject a made-with-line at the bottom of the page.
-  # You can turn it off, but we would really appreciate if you don’t :-).
+  # Linha "Made with..." no rodapé (padrão = mostrar)
   # hideMadeWithLine = true
 
-  # By default, this theme displays dates with a format like "02 Jan, 2006", but
-  # you can customize it by setting the `dateFormat` param in your site's config
-  # file. See [Hugo's Format function docs](https://gohugo.io/functions/format/)
-  # for details. An example TOML config that uses [ISO
-  # 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
-  # dateFormat = "2006-01-02"
+  # Formato de data (padrão do tema = "02 Jan, 2006")
+  # dateFormat = "02/01/2006" # << Exemplo de formato brasileiro, descomente se preferir
