--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -26,11 +26,11 @@ defaults:
     shell: bash
 
 jobs:
-  # Job de Build (Construção)
+  # Job de Build
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.110.0 # Use uma versão recente ou a mesma que você usa localmente
+      HUGO_VERSION: 0.110.0
     steps:
       - name: Install Hugo CLI
         run: |
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          submodules: true # Baixa o tema que é um submódulo (se você usou Opção 1) ou 'recursive'
+          submodules: false
           fetch-depth: 0
       - name: Setup Pages
         id: pages
@@ -48,8 +48,6 @@ jobs:
         env:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
-          # A baseURL será pega automaticamente da configuração do GitHub Pages
-          # HUGO_BASEURL: ${{ steps.pages.outputs.base_url }}
         run: |
           hugo \
             --gc \
@@ -58,15 +56,15 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public # Pasta onde o Hugo gera o site
+          path: ./public
 
-  # Job de Deploy (Publicação)
+  # Job de Deploy
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build # Só roda depois que o build terminar
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
